Revert needed code.