@@ -70,15 +70,20 @@ public class ApplicationPidFileWriter implements ApplicationListener<SpringAppli
 	private static final List<Property> FILE_PROPERTIES;
 
 	static {
-		FILE_PROPERTIES = List.of(new SpringProperty("spring.pid.", "file"), new SpringProperty("spring.", "pidfile"),
-				new SystemProperty("PIDFILE"));
+		List<Property> properties = new ArrayList<>();
+		properties.add(new SpringProperty("spring.pid.", "file"));
+		properties.add(new SpringProperty("spring.", "pidfile"));
+		properties.add(new SystemProperty("PIDFILE"));
+		FILE_PROPERTIES = Collections.unmodifiableList(properties);
 	}
 
 	private static final List<Property> FAIL_ON_WRITE_ERROR_PROPERTIES;
 
 	static {
-		FAIL_ON_WRITE_ERROR_PROPERTIES = List.of(new SpringProperty("spring.pid.", "fail-on-write-error"),
-				new SystemProperty("PID_FAIL_ON_WRITE_ERROR"));
+		List<Property> properties = new ArrayList<>();
+		properties.add(new SpringProperty("spring.pid.", "fail-on-write-error"));
+		properties.add(new SystemProperty("PID_FAIL_ON_WRITE_ERROR"));
+		FAIL_ON_WRITE_ERROR_PROPERTIES = Collections.unmodifiableList(properties);
 	}
 
 	private static final AtomicBoolean created = new AtomicBoolean();
